Add support for the `skip-prune` option
This PR adds support for [the `skip-prune` option](https://github.com/deepmap/oapi-codegen/blob/af55078a5e93787f522e8d26dd550ebf28d4deb1/pkg/codegen/configuration.go#L92) of `oapi-codegen`, which generates structs for components that aren't otherwise referenced in the schema.

Signed-off-by: Brandon Sprague <brandon@sprague.mx>

--- a/example/BUILD.bazel
+++ b/example/BUILD.bazel
@@ -20,6 +20,7 @@ oapi_codegen_go(
     name = "api",
     importpath = "github.com/Silicon-Ally/rules_oapi_codegen/example/api",
     spec = "petstore.yaml",
+    skip_prune = True,
     visibility = ["//visibility:public"],
 )
 
